[package]
name = "git-switcher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.2"
anyhow = "1.0"
dirs = "6.0"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = "z"
strip = true